improvements to phone and items panel (wip)

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -45,6 +45,8 @@ textarea {
 #textMessages,
 #friendSpaceFeed {
 	list-style: none;
+	padding-left: 0;
+	padding-right: .5em;
 }
 
 #textMessageBox {
@@ -139,3 +141,22 @@ textarea {
 	color: grey;
 	/* font-family: "Munro Small", monospace; */
 }
+
+::-webkit-scrollbar {
+	width: 10px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+	background: #f1f1f1; 
+  }
+   
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+	background: #888; 
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+	background: #555; 
+  }
